# f1_tenth_ros2

./: README.md
frenet_pkg/: CMakeLists.txt  package.xml
frenet_pkg/launch/: Frenet_frame.launch.py
frenet_pkg/src/: Frenet.cpp  FrenetFrame.cpp  FrenetFrame.h
msg_custom_f1/: CMakeLists.txt  package.xml
msg_custom_f1/msg/: ObstacleData.msg
obstacle_pkg/: CMakeLists.txt  package.xml
obstacle_pkg/launch/: Obstacles.launch.py
obstacle_pkg/msg/: ObstacleData.msg
obstacle_pkg/src/: Obstacles.cpp
regulated_pure_pursuit/: CMakeLists.txt  code_base.txt  package.xml  purev1.txt
regulated_pure_pursuit/config/: waypoints.yaml
regulated_pure_pursuit/launch/: pure_pursuit_launch.py
regulated_pure_pursuit/src/: pure_pursuit.cpp
stanley_node_pkg/: CMakeLists.txt  dudoso.txt  package.xml  waypoints.txt
stanley_node_pkg/config/: waypoints.yaml
stanley_node_pkg/launch/: stanley_controller.launch.py
stanley_node_pkg/src/: Linear_interpolation.h  StanleyController.cpp  StanleyController.h  StanleyNode.cpp  stanley.txt  stanley_algorithm.h  stanley_controller.cpp  subset_waypoints.h
waypoint_visualizer/: CMakeLists.txt  package.xml
waypoint_visualizer/launch/: waypoint_visualizer.launch.py
waypoint_visualizer/src/: waypoint_visualizer_node.cpp
